# flp-fun

./: Makefile  rv-2-rka.cabal  test.in
src/: Makefile  README  Readme  rv-2-rka  rv-2-rka.hi  rv-2-rka.hs  test  test.hi  test.hs  test2.txt
src/doc/: Main.html  doc-index.html  index.html
src/testing/: test.hs  test2.hs
